--- a/AuthFrontend/src/app/component/dashboard/dashboard.component.html
+++ b/AuthFrontend/src/app/component/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container pt-4">
     <div class="row pb-2">
-        <div> 
+        <div>
             <button mat-raised-button color="light">Logout</button>
         </div>
     </div>
@@ -12,7 +12,7 @@
 
     <div *ngIf="localStorage">
         <mat-card>
-            <div>Login successfully</div>
+            <div>Login successfully with: -> {{username}}</div>
         </mat-card>
     </div>
 
