--- a/AuthFrontend/src/app/app.component.html
+++ b/AuthFrontend/src/app/app.component.html
@@ -1,2 +1,11 @@
 <app-header></app-header>
-  <router-outlet></router-outlet>
+<div id="page-container">
+  <div id="content-wrap">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer id="footer"></app-footer>
+  <footer ></footer>
+</div>
+
+
+
