--- a/AuthFrontend/src/app/component/dashboard/dashboard.component.html
+++ b/AuthFrontend/src/app/component/dashboard/dashboard.component.html
@@ -1,19 +1,83 @@
-<div class="container pt-4">
-    <div class="row pb-2">
-        <div>
-            <button mat-raised-button color="light">Logout</button>
+
+<mat-sidenav-container class="example-container">
+
+  <mat-sidenav mode="side" opened>
+    <div class="container" style="padding-top: 3rem;">
+      <div class="row" style="margin-top: 20px">
+        <div class="col">
+          <h5><mat-icon class="icon-color-email"> email</mat-icon>E-mail</h5>
         </div>
-    </div>
-    <div *ngIf="!(localStorage)">
-        <mat-card>
-            <div>Login failed</div>
-        </mat-card>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <p>{{email}}</p>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 20px">
+        <div class="col">
+          <h5><mat-icon color="primary">account_box</mat-icon>Username</h5>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <p>{{username}}</p>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 20px">
+        <div class="col">
+          <h5> <mat-icon class="icon-color-bug">bug_report</mat-icon>My Bug({{count}})</h5>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 20px">
+        <div class="col">
+          <h5><mat-icon>search</mat-icon> Search</h5>
+        </div>
+      </div>
+
     </div>
 
-    <div *ngIf="localStorage">
-        <mat-card>
-            <div>Login successfully with: -> {{username}}</div>
-        </mat-card>
-    </div>
 
-</div>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <div class="container" style="padding-top: 3rem;">
+    <div style="text-align: end;">
+      <p> New Bug
+        <mat-icon [routerLink]="['/addBug']" class="pointer">add</mat-icon>
+      </p>
+    </div>
+    <mat-card>
+
+      <div class="container mt-3">
+        <table class="table">
+          <thead>
+          <tr>
+            <th>Id</th>
+            <th>Title</th>
+            <th>Open by</th>
+            <th>Open Date</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr class="pointer" *ngFor="let entry of bugs ; let i = index">
+            <td>{{entry.progressiveNumber}}</td>
+            <td>{{entry.title}}</td>
+            <td>{{entry.username}}</td>
+            <td>{{entry.dob | date}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </mat-card>
+  </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+
+
