--- a/AuthFrontend/src/app/component/account/account.component.html
+++ b/AuthFrontend/src/app/component/account/account.component.html
@@ -66,7 +66,7 @@
 
           <div class="row">
             <div class="col">
-              <p>{{dob | date}}</p>
+              <p>{{dob | date : 'dd MMM yyyy'}}</p>
             </div>
           </div>
 
