--- a/AuthFrontend/src/app/component/dashboard/dashboard.component.html
+++ b/AuthFrontend/src/app/component/dashboard/dashboard.component.html
@@ -67,7 +67,7 @@
             <td>{{entry.progressiveNumber}}</td>
             <td>{{entry.title}}</td>
             <td>{{entry.username}}</td>
-            <td>{{entry.dob | date}}</td>
+            <td>{{entry.dob | date: 'd MMM yyyy'}}</td>
           </tr>
           </tbody>
         </table>
