--- a/AuthFrontend/src/app/component/add-bug/add-bug.component.html
+++ b/AuthFrontend/src/app/component/add-bug/add-bug.component.html
@@ -28,7 +28,7 @@
 
       <div class="row">
           <div class="col" >
-            <mat-form-field class="example-full-width" appearance="outline" style="width: 100% ;">
+            <mat-form-field class="example-full-width" appearance="outline" style="width: 50% ;">
               <mat-label>Description</mat-label>
               <textarea  matInput placeholder="Description" formControlName="description"></textarea>
             </mat-form-field>
@@ -39,7 +39,7 @@
       <div class="row">
 
         <div class="col">
-          <mat-form-field appearance="outline" style="width:60%;">
+          <mat-form-field appearance="outline" style="width:30%;">
             <mat-label>Severity</mat-label>
             <mat-select formControlName="severity">
               <mat-option *ngFor="let severity of severityValues" [value]="severity.value">
@@ -49,7 +49,7 @@
           </mat-form-field>
         </div>
 
-        <div class="col">
+        <!-- <div class="col">
             <mat-form-field appearance="outline" >
               <mat-label>Choose a date</mat-label>
               <input matInput [matDatepicker]="picker" formControlName="dob">
@@ -57,7 +57,7 @@
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
-          </div>
+          </div> -->
       </div>
 
       <div class="row" style="margin-top: 10px">
